syntax = "proto3";

package post;

import "general.proto";

service Post {
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse) {}
  rpc GetPostById(general.IdParams) returns (general.PostEntityPB) {}
  rpc CreatePost(CreatePostRequest) returns (general.IdParams) {}
  rpc UpdatePost(UpdatePostRequest) returns (general.IdParams) {}
  rpc DeletePost(general.IdParams) returns (general.IdParams) {}
}

message CreatePostRequest {
  int32 author_id = 1;
  string title = 2;
  string description = 3;
  string image_url = 4;
}

message UpdatePostRequest {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string image_url = 4;
}

message GetPostsRequest {
  int32 page = 1;
  int32 limit = 2;
  optional int32 author_id = 3;
  optional string search = 4;
}

message GetPostsResponse {
  int32 page = 1;
  int32 total_pages = 2;
  int32 total_results = 3;
  repeated general.PostEntityPB posts = 4;
}